@@ -12,9 +12,10 @@ A script extract data from .res (results) files generated by UNICORN Chromatogra
 
 News
 ----
-v0.17 released:
+v0.18 released:
 
-- Added experimental support for extracting and plotting UNICORN6 zip bundles
+- FIXED: xmin being ignored when 0
+- FIXED: Files with capitalised name ending are not loaded
 
 
 Installation
