@@ -1,6 +1,7 @@
 v0.18
 ======
-- fixed xmin being ignored when 0
+- FIXED: xmin being ignored when 0
+- FIXED: Files with capitalised name ending are not loaded
 
 v0.17
 ======
